# vis-scraper

./: .gitignore  README.md  SNAPSHOT.md  language_validation_report.csv  pyproject.toml  setup_github.sh  vis_scraper_validate_languages.py  vis_translations_all_languages_validated.csv
